# cpp-mini-search

./: .gitignore  CMakeLists.txt  LICENSE  MiniSearch_CMakeLists_diff.txt  MiniSearch_README_diff.md  MiniSearch_include_document_store_diff.h  MiniSearch_include_http_server_diff.h  MiniSearch_include_search_engine_diff.h  MiniSearch_include_text_parser_diff.h  MiniSearch_src_document_store_diff.cpp  MiniSearch_src_http_server_diff.cpp  MiniSearch_src_main_diff.cpp  MiniSearch_src_search_engine_diff.cpp  MiniSearch_src_text_parser_diff.cpp  README.md  README_diff.md  _diff (1).gitignore  document_store.cpp  document_store.h  http_server.cpp  http_server.h  main.cpp  search_engine.cpp  search_engine.h  text_parser.cpp  text_parser.h
